One paged variant, no style

--- a/HelloSurname/Views/Home/Index.cshtml
+++ b/HelloSurname/Views/Home/Index.cshtml
@@ -1,8 +1,20 @@
-﻿@{
+﻿@model HelloSurname.Models.IndexViewModel
+@{
     ViewData["Title"] = "Home Page";
 }
 
 <div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    @{
+        if (Model?.Name != null)
+        {
+            <h3>Hello @Model.Name!</h3>
+        }
+        else
+        {
+            <form asp-action="Index" method="post">
+                <input asp-for="name" type="text" name="name" />
+                <input type="submit" value="Send" class="btn btn-primary" />
+            </form>
+        }
+    }
 </div>
