--- a/HelloSurname/Views/Home/Index.cshtml
+++ b/HelloSurname/Views/Home/Index.cshtml
@@ -1,20 +1,13 @@
-﻿@model HelloSurname.Models.IndexViewModel
+﻿@model HelloSurname.Models.UserNameInputModel
 @{
-    ViewData["Title"] = "Home Page";
+    ViewData["Title"] = "Hello Noname!";
 }
 
 <div class="text-center">
-    @{
-        if (Model?.Name != null)
-        {
-            <h3>Hello @Model.Name!</h3>
-        }
-        else
-        {
-            <form asp-action="Index" method="post">
-                <input asp-for="name" type="text" name="name" />
-                <input type="submit" value="Send" class="btn btn-primary" />
-            </form>
-        }
-    }
+        <form asp-action="HelloName" method="post">
+            <input asp-for="Name" type="text" name="name" />
+            <input type="submit" value="Send" class="btn btn-primary" />
+        </form>
+        <div asp-validation-summary="All"></div>
 </div>
+
