--- a/HelloSurname/Views/Shared/_Layout.cshtml
+++ b/HelloSurname/Views/Shared/_Layout.cshtml
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="~/Entry_Name.styles.css" asp-append-version="true" />
 </head>
 <body>
-    <div class="contentWrapper">
+    <div class="contentWrapper mt-5">
         @RenderBody()
     </div>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
